--- a/wiki/Page1.wiki
+++ b/wiki/Page1.wiki
@@ -2,3 +2,4 @@
 
  * 用vs2010打开 built/win32/libsipua3.sln
  * 会转换成 vs2010的解决方案，转换完成后，发现有两个工程unavailable：libsipua3和libspeex
+ * 查看convert报告，libsipua3是由于mobile sdk的问题(可能vs2010不支持mobile sdk，未求证)，解决办法：关闭工程，用文本查看工具打开 libsipua3.vcproj，删除 177~485行；重新打开解决方案，发现libsipua3已经正常了
