Edited wiki page build through web user interface.

--- a/wiki/build.wiki
+++ b/wiki/build.wiki
@@ -1,4 +1,4 @@
-#编译顺序.
+*编译顺序*
 
  * 编译Audio下的6个工程:libbroadvoice, libg726, libgsm, libilbc, libspeex, libspeexdsp
  * 编译 osipparse2 -> osip2 -> eXosip2 -> oRTP -> mediasteamer2 ->libsipua3
